--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "egg": "^2.6.1",
+    "egg-redis": "^2.4.0",
     "egg-scripts": "^2.6.0",
     "egg-sequelize": "^5.2.0",
     "egg-shell-change": "^1.1.0",
